Fix alignment of header image

--- a/src/stylesheets/layout/_header.scss
+++ b/src/stylesheets/layout/_header.scss
@@ -25,6 +25,8 @@
 }
 
 .site-header__image {
+  display: block;
+
   pointer-events: none;
 }
 
